<resources>
    <string name="app_name">spp蓝牙波形处理</string>
    <string name="title_activity_main">主界面</string>
    <string name="title_home">搜索</string>
    <string name="title_dashboard">已配对</string>
    <string name="visibility">打开可见性</string>
    <string name="find_device">查找设备</string>
    <string name="title_activity_supervisor">波形监视</string>
    <string name="supervisor_graphTitle">幅频特性绘制</string>
    <string name="cancel_allThread">断开所有连接</string>
    <string name="text_row2_field">滤波前-频率平均值</string>
    <string name="text_row1_field">滤波前-幅值平均值</string>
    <string name="text_row3_field">滤波后-幅值平均值</string>
    <string name="text_row4_field">滤波后-频率平均值</string>
    <string name="test_row5_field">当前已读取</string>
</resources>