<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="0dp"
    android:paddingEnd="0dp"
    android:paddingRight="0dp"
    android:paddingBottom="0dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/supervisor_graphTitle"
        android:textSize="15sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/black" />

    <com.example.signalsupervisor3.ui.views.CanvasView
        android:id="@+id/supervisor_canvas"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="10sp"
        android:text="X: log(频率)     Y: 20log(幅值比)"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:divider="@drawable/divider_line_vertical"
        android:orientation="horizontal"
        android:showDividers="middle">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:divider="@drawable/divider_line_3dp"
            android:orientation="vertical"
            android:showDividers="middle">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:divider="@drawable/divider_line"
                android:showDividers="middle">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical">

                    <TextView
                        android:textSize="10sp"
                        android:layout_width="wrap_content"
                        android:text="@string/text_row1_field" />

                    <TextView
                        android:layout_weight="2"
                        android:id="@+id/text_CH1_VMax"
                        android:textStyle="bold"
                        android:gravity="center_horizontal"
                        android:text="0" />

                    <TextView
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="V" />
                </TableRow>

                <TableRow
                    android:layout_weight="1"
                    android:gravity="center_vertical">

                    <TextView
                        android:textSize="10sp"
                        android:layout_width="wrap_content"
                        android:text="@string/text_row2_field" />

                    <TextView

                        android:id="@+id/text_CH1_Freq"
                        android:layout_weight="2"
                        android:textStyle="bold"
                        android:gravity="center_horizontal"
                        android:text="0" />

                    <TextView
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="Hz" />
                </TableRow>


            </TableLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:divider="@drawable/divider_line"
                android:orientation="vertical"
                android:showDividers="middle">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical">

                    <TextView
                        android:textSize="10sp"
                        android:layout_width="wrap_content"
                        android:text="@string/text_row3_field" />

                    <TextView
                        android:layout_weight="2"
                        android:id="@+id/text_CH2_VMax"
                        android:textStyle="bold"
                        android:gravity="center_horizontal"
                        android:text="0" />

                    <TextView
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="V" />
                </TableRow>

                <TableRow
                    android:layout_weight="1"
                    android:gravity="center_vertical">

                    <TextView
                        android:textSize="10sp"
                        android:layout_width="wrap_content"
                        android:text="@string/text_row4_field" />

                    <TextView
                        android:id="@+id/text_CH2_Freq"
                        android:layout_weight="2"
                        android:textStyle="bold"
                        android:gravity="center_horizontal"
                        android:text="0" />

                    <TextView
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="Hz" />
                </TableRow>
            </TableLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:divider="@drawable/divider_line"
                android:showDividers="middle">

                <TableRow
                    android:orientation="horizontal"
                    android:id="@+id/row5"
                    android:layout_weight="1"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="left"
                        android:textSize="10sp"
                        android:text="当前已读取" />

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:textSize="20sp"
                        android:id="@+id/text_has_trans"
                        android:text="0" />

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textStyle="bold"
                        android:text="Byte" />
                </TableRow>

            </TableLayout>

        </LinearLayout>

        <TableLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="3dp"
            android:layout_weight="4"
            android:stretchColumns="0">

            <!--            <TableRow-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="match_parent"-->
            <!--                android:layout_weight="1"-->
            <!--                android:gravity="center_vertical">-->

            <!--                <TextView-->
            <!--                    android:layout_weight="1"-->
            <!--                    android:text="X轴 刻度"-->
            <!--                    android:textSize="10sp" />-->

            <!--                <Button-->
            <!--                    android:id="@+id/btn_x_axis_add"-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_weight="1"-->
            <!--                    android:text="增大" />-->

            <!--                <Button-->
            <!--                    android:id="@+id/btn_x_axis_reduce"-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_weight="1"-->
            <!--                    android:text="减小" />-->
            <!--            </TableRow>-->

            <TableRow
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <!--                <TextView-->
                <!--                    android:layout_weight="1"-->
                <!--                    android:text="Y轴 刻度"-->
                <!--                    android:textSize="10sp" />-->

                <Button
                    android:id="@+id/btn_begin_trans"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="开始\n读取" />

                <Button
                    android:id="@+id/btn_stop_trans"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="暂停\n读取" />


            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical">


                <Button
                    android:id="@+id/btn_show_ch1"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="解析\n滤波前" />

                <Button
                    android:id="@+id/btn_show_ch2"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="解析\n滤波后" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <Button
                    android:id="@+id/btn_clear_ch1"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="清除滤波前" />

                <Button
                    android:id="@+id/btn_clear_ch2"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="清除滤波后" />

                <Button
                    android:id="@+id/btn_clear_buffer"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="清除缓冲区" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <Button
                    android:id="@+id/btn_draw"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="绘制幅频特性曲线" />

            </TableRow>

            <!--            <TableRow-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_weight="1"-->
            <!--                android:gravity="center_vertical">-->

            <!--&lt;!&ndash;                <TextView&ndash;&gt;-->
            <!--&lt;!&ndash;                    android:layout_width="0dp"&ndash;&gt;-->
            <!--&lt;!&ndash;                    android:layout_weight="1"&ndash;&gt;-->
            <!--&lt;!&ndash;                    android:textSize="10sp"&ndash;&gt;-->
            <!--&lt;!&ndash;                    android:text="当前缓冲区大小:" />&ndash;&gt;-->

            <!--                <EditText-->
            <!--                    android:id="@+id/edit_buffer"-->
            <!--                    android:layout_width="0dp"-->
            <!--                    android:layout_weight="1" />-->

            <!--                <TextView-->
            <!--                    android:layout_width="0dp"-->
            <!--                    android:layout_weight="0.5"-->
            <!--                    android:textSize="12sp"-->
            <!--                    android:textStyle="bold"-->
            <!--                    android:text="Byte" />-->

            <!--                <Button-->
            <!--                    android:id="@+id/btn_confirm"-->
            <!--                    android:layout_width="0dp"-->
            <!--                    android:layout_weight="1"-->
            <!--                    android:text="修改" />-->

            <!--            </TableRow>-->
        </TableLayout>

    </LinearLayout>

</LinearLayout>